# deep-fractal

./: Cargo.toml  README.md
shaders/: fractal.wgsl
src/: app.rs  main.rs  perturbation.rs
src/gpu/: mod.rs
src/reference/: mod.rs
src/render/: mod.rs
