[package]
name = "deep-fractal"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "24"
winit = "0.30"
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = "0.31"
rug = "1"
rayon = "1"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = "thin"
